# euicc_simulator

./: .gitignore  CLAUDE.md  README.md  config.yaml  pyproject.toml  requirements.txt
app/: config.py  main.py
app/crypto/: cert_validator.py  certificates.py  ecdsa_engine.py  scp03t.py
app/es10/: es10a.py  es10b.py  es10b_iot.py  es10c.py
app/models/: database.py  euicc.py
app/services/: apdu_dispatcher.py  apdu_handler.py  asn1_codec.py  euicc_manager.py  laravel_seeder.py
app/transport/: apdu_codec.py  tcp_protocol.py  tcp_server.py
asn1_schemas/: rsp_definitions.asn
certs/_trusted_cis/: oiste_gsma_ci_g1.crt
certs/sgp26_nist/: SK_EUM_ECDSA_NIST.pem
tests/: conftest.py  test_apdu_codec.py  test_apdu_dispatcher.py  test_asn1.py  test_crypto.py  test_es10b.py  test_tcp_full_flow.py  test_tcp_protocol.py
