[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "asn1_schemas*"]

[project]
name = "euicc-simulator"
version = "0.1.0"
description = "GSMA eSIM Simulator (SGP.22) with raw APDU over TCP/HTTP"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "asn1tools>=0.167",
    "cryptography>=44",
    "sqlalchemy>=2.0",
    "aiosqlite>=0.20",
    "structlog>=24",
    "pyyaml>=6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "httpx>=0.28",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
